# knowledge_vault

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: fly-deploy.yml
alembic/: env.py
alembic/versions/: 0ad7eb6067cc_add_learning_project_id_to_notes.py  0d01ed839b76_add_pgvector_extension_and_embedding_.py  119bc53d93a1_add_all_indexes.py  1daacdd0c788_add_refresh_tokens_table.py  21a78b3eead7_update_datetime_fields_to_support_.py  23faacf5d6b5_add_notes_relationship_to_learning_.py  4018b52df09c_create_initial_setup_with_user_table.py  47e9cb4ffc5b_hash_refresh_tokens_security_fix.py  49dcf2d5c5e4_add_user_id_to_notes_table.py  7b9e5a9ad8b1_enforce_single_active_session_per_user.py  a1b2c3d4e5f6_add_user_id_to_categories_tenant_scope.py  b79968a4bf2c_fix_categories_table_updated_at_.py  cb1197a3b50d_update_created_at_and_updated_at.py  de44002675d7_add_categories_table_and_update_.py  f207937b02ac_add_learning_projects_and_update_.py  f5d337fffcb3_add_session_note_flashcard_and_anki_.py
app/: main.py
app/api/: dependencies.py
app/core/: config.py  (+4 more)
extension/: README.md  background.js  manifest.json  offscreen.html  offscreen.js  panel.css  panel.html  panel.js  popup.css  popup.html  popup.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
knowledge-vault/: package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
scripts/: build-extension-config.js  check-extension-production.js
(+213 files in other folders)
